--- a/css/sass/pages/_home.scss
+++ b/css/sass/pages/_home.scss
@@ -101,7 +101,7 @@ main {
     justify-content: center;
     overflow: hidden;
     .container {
-        opacity: 0;
+        // opacity: 0;
         text-align: center;
         // @include transtime(0.3s);
         // &.reached {
