--- a/css/sass/pages/_home.scss
+++ b/css/sass/pages/_home.scss
@@ -101,12 +101,8 @@ main {
     justify-content: center;
     overflow: hidden;
     .container {
-        // opacity: 0;
         text-align: center;
-        // @include transtime(0.3s);
-        // &.reached {
-        //     opacity: 1;
-        // }
+        @include transtime(0.3s);
         img {
             max-width: 25%;
             filter: drop-shadow(0 0 2px var(--option-color));
@@ -176,10 +172,6 @@ main {
         justify-content: center;
         align-items: center;
         @include transtime(0.3s);
-        right: -200%;
-        &.reached {
-            right: 0;
-        }
         &::before {
             content: "";
             @include smallview {
@@ -210,10 +202,6 @@ main {
     .container {
         padding: 20px 0;
         @include transtime(0.3s);
-        left: -200%;
-        &.reached {
-            left: 0;
-        }
         overflow: hidden;
         .emergency-note {
             p {
@@ -323,10 +311,6 @@ main {
         justify-content: center;
         align-items: center;
         @include transtime(0.3s);
-        visibility: hidden;
-        &.reached {
-            visibility: visible;
-        }
         &::before {
             content: "";
             @include smallview {
@@ -356,10 +340,6 @@ main {
     }
     .container {
         @include transtime(0.3s);
-        opacity: 0;
-        &.reached {
-            opacity: 1;
-        }
         .health-note {
             p {
                 margin: 0;
@@ -545,10 +525,6 @@ main {
         justify-content: center;
         align-items: center;
         @include transtime(0.3s);
-        opacity: 0;
-        &.reached {
-            opacity: 1;
-        }
         &::before {
             content: "";
             @include smallview {
@@ -601,10 +577,6 @@ main {
             }
             &:first-of-type {
                 @include transtime(0.3s);
-                left: -200%;
-                &.reached {
-                    left: 0;
-                }
                 &::before {
                     height: 100%;
                     width: 2px;
@@ -620,10 +592,6 @@ main {
             }
             &:nth-of-type(2) {
                 @include transtime(0.3s);
-                right: -200%;
-                &.reached {
-                    right: 0;
-                }
                 &::before {
                     width: 100%;
                     height: 2px;
@@ -633,10 +601,6 @@ main {
             }
             &:nth-of-type(3) {
                 @include transtime(0.3s);
-                left: -200%;
-                &.reached {
-                    left: 0;
-                }
                 &::before {
                     width: 100%;
                     height: 2px;
@@ -652,10 +616,6 @@ main {
             }
             &:last-of-type {
                 @include transtime(0.3s);
-                right: -200%;
-                &.reached {
-                    right: 0;
-                }
                 &::before {
                     height: 100%;
                     width: 2px;
@@ -735,10 +695,6 @@ main {
         justify-content: center;
         align-items: center;
         @include transtime(0.3s);
-        visibility: hidden;
-        &.reached {
-            visibility: visible;
-        }
         &::before {
             content: "";
             @include smallview {
@@ -769,10 +725,6 @@ main {
     .container {
         padding-top: 20px;
         @include transtime(0.3s);
-        opacity: 0;
-        &.reached {
-            opacity: 1;
-        }
         .vet-content {
             display: flex;
             justify-content: space-between;
@@ -938,10 +890,6 @@ main {
         justify-content: center;
         align-items: center;
         @include transtime(0.3s);
-        opacity: 0;
-        &.reached {
-            opacity: 1;
-        }
         &::before {
             content: "";
             @include smallview {
@@ -985,10 +933,6 @@ main {
                 order: 1;
             }
             @include transtime(0.3s);
-            left: -200%;
-            &.reached {
-                left: 0;
-            }
             input,
             textarea {
                 padding: 15px 30px;
@@ -1048,10 +992,6 @@ main {
                 order: 0;
             }
             @include transtime(0.3s);
-            right: -200%;
-            &.reached {
-                right: 0;
-            }
             .address,
             .phone {
                 width: 100%;
