--- a/css/home.css
+++ b/css/home.css
@@ -1101,7 +1101,7 @@ nav ul.container li ul.megamenu a {
   width: 100%;
   height: 100vh;
   background-color: var(--dark-color);
-  background-image: url("../../../assets/imgs/landing0.jpg");
+  background-image: url("../assets/imgs/landing0.jpg");
   background-size: cover;
   position: relative;
 }
@@ -1191,7 +1191,7 @@ main {
   width: 100%;
   padding-top: var(--section-padding);
   padding-bottom: var(--section-padding);
-  background-image: url("../../../assets/imgs/background-1.png");
+  background-image: url("../assets/imgs/background-1.png");
   background-size: cover;
   background-color: var(--theme-background);
   color: var(--theme-color);
@@ -1465,7 +1465,7 @@ main .container p {
   width: 100%;
   padding-top: var(--section-padding);
   padding-bottom: var(--section-padding);
-  background-image: url("../../../assets/imgs/background-2.png");
+  background-image: url("../assets/imgs/background-2.png");
   background-size: cover;
   background-color: var(--theme-background);
   color: var(--theme-color);
@@ -1996,7 +1996,7 @@ main .container p {
   width: 100%;
   padding-top: var(--section-padding);
   padding-bottom: var(--section-padding);
-  background-image: url("../../../assets/imgs/background-3.png");
+  background-image: url("../assets/imgs/background-3.png");
   background-size: cover;
   background-color: var(--theme-background);
   color: var(--theme-color);
