--- a/css/sass/pages/_home.scss
+++ b/css/sass/pages/_home.scss
@@ -4,7 +4,7 @@
     width: 100%;
     height: 100vh;
     background-color: var(--dark-color);
-    background-image: url("../../../assets/imgs/landing0.jpg");
+    background-image: url("../assets/imgs/landing0.jpg");
     background-size: cover;
     position: relative;
     &::before {
@@ -92,7 +92,7 @@ main {
     width: 100%;
     padding-top: var(--section-padding);
     padding-bottom: var(--section-padding);
-    background-image: url("../../../assets/imgs/background-1.png");
+    background-image: url("../assets/imgs/background-1.png");
     background-size: cover;
     background-color: var(--theme-background);
     color: var(--theme-color);
@@ -298,7 +298,7 @@ main {
     width: 100%;
     padding-top: var(--section-padding);
     padding-bottom: var(--section-padding);
-    background-image: url("../../../assets/imgs/background-2.png");
+    background-image: url("../assets/imgs/background-2.png");
     background-size: cover;
     background-color: var(--theme-background);
     color: var(--theme-color);
@@ -682,7 +682,7 @@ main {
     width: 100%;
     padding-top: var(--section-padding);
     padding-bottom: var(--section-padding);
-    background-image: url("../../../assets/imgs/background-3.png");
+    background-image: url("../assets/imgs/background-3.png");
     background-size: cover;
     background-color: var(--theme-background);
     color: var(--theme-color);
