--- a/css/home.css
+++ b/css/home.css
@@ -101,7 +101,7 @@ a:focus-visible {
   position: fixed;
   top: 0;
   left: 0;
-  background-image: url("../../../assets/imgs/Pulse.svg");
+  background-image: url("../assets/imgs/Pulse.svg");
   background-repeat: no-repeat;
   background-size: cover;
   display: -webkit-box;
