--- a/css/sass/layouts/_preloader.scss
+++ b/css/sass/layouts/_preloader.scss
@@ -6,7 +6,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-image: url("../../../assets/imgs/Pulse.svg");
+    background-image: url("../assets/imgs/Pulse.svg");
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
